// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`physicalSadness should hit target with single hit 1`] = `-3.12`;

exports[`physicalSadness should hit target with single hit 2`] = `97`;

exports[`physicalSadness should hit target with single hit 3`] = `
[
  {
    "action": "attack",
    "actionType": "phys",
    "dmg": 10.9,
    "dmgType": "physical",
    "exp": 87,
    "hp": -2.9,
    "initiator": "magni",
    "target": "asperiores",
    "weapon": {
      "code": "a100",
    },
  },
  {
    "action": "Вселенская скорбь",
    "actionType": "dmg-magic",
    "dmg": 11.12,
    "dmgType": "physical",
    "effect": undefined,
    "exp": 97,
    "hp": -3.12,
    "initiator": "asperiores",
    "msg": undefined,
    "target": "magni",
  },
]
`;

exports[`physicalSadness should hit targets with multiple hit 1`] = `5.22`;

exports[`physicalSadness should hit targets with multiple hit 2`] = `30`;

exports[`physicalSadness should hit targets with multiple hit 3`] = `
[
  {
    "action": "attack",
    "actionType": "phys",
    "dmg": 2.73,
    "dmgType": "physical",
    "exp": 22,
    "hp": 5.27,
    "initiator": "magni",
    "target": "asperiores",
    "weapon": {
      "code": "a100",
    },
  },
  {
    "action": "attack",
    "actionType": "phys",
    "dmg": 2.73,
    "dmgType": "physical",
    "exp": 22,
    "hp": 2.54,
    "initiator": "magni",
    "target": "asperiores",
    "weapon": {
      "code": "a100",
    },
  },
  {
    "action": "attack",
    "actionType": "phys",
    "dmg": 2.73,
    "dmgType": "physical",
    "exp": 22,
    "hp": -0.19,
    "initiator": "magni",
    "target": "asperiores",
    "weapon": {
      "code": "a100",
    },
  },
  {
    "action": "attack",
    "actionType": "phys",
    "dmg": 2.73,
    "dmgType": "physical",
    "exp": 22,
    "hp": -2.92,
    "initiator": "magni",
    "target": "asperiores",
    "weapon": {
      "code": "a100",
    },
  },
  {
    "action": "Вселенская скорбь",
    "actionType": "dmg-magic",
    "dmg": 2.78,
    "dmgType": "physical",
    "effect": undefined,
    "exp": 30,
    "hp": 5.22,
    "initiator": "asperiores",
    "msg": undefined,
    "target": "magni",
  },
]
`;
